--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
 
 <body>
 
-  <body class="d-flex h-100 text-center text-white bg-dark" background="/images/indexPhoto.jpg">
+  <body class="d-flex h-100 text-center text-dark bg-dark" background="/images/indexPhoto2.jpg">
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
       <header class="mb-auto">
         <div>
-          <h3 class="float-md-start mb-0">###</h3>
+          <h3 class="float-md-start mb-0"></h3>
           <nav class="nav nav-masthead justify-content-center float-md-end">
             <a class="nav-link active" aria-current="page" href="../pages/index.html">Volunteers</a>
             <a class="nav-link" href="pages/index-org.html">Organizers</a>
