--- a/text/nav.html
+++ b/text/nav.html
@@ -26,7 +26,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="/pages/index.html">Sign Out</a>
+          <a class="nav-link" href="./index.html">Sign Out</a>
         </li>
       </ul>
     </div>
